# proe_kolok1

./: CMakeLists.txt  candidate.cpp  candidate.hpp  constituency.cpp  constituency.hpp  dHondt_method.cpp  dHondt_method.hpp  electoral_system.cpp  electoral_system.hpp  electoral_system_builder.cpp  electoral_system_builder.hpp  helpers.hpp  main.cpp  politycal_party.cpp  politycal_party.hpp
